# statech-interview-backend

./: .gitignore  Dockerfile  Makefile  README  README.md  docker-compose.yaml  pyproject.toml
api/: db.py  main.py  migrate_db.py
api/models/: choice.py  corporate.py  question.py  quiz_result.py  user.py  userAnswer.py
api/repository/: quiz.py  result.py  user.py
api/repository/admin/: quiz_crud.py
api/routers/: quiz.py  result.py  test.py  user.py
api/routers/admin/: quiz_crud.py
api/schemas/: choice.py  question.py  userAnswer.py
api/schemas/request_model/: quiz_crud.py  userAnswer.py
api/schemas/response_model/: choice.py  question.py  quiz_crud.py  result.py  user.py
api/use_cases/: base.py  quiz.py  result.py  user.py
api/use_cases/admin/: quiz_crud.py
src/: main.py
